--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Generate snake.svg
         uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: IT21158704
+          github_user_name: nadun-dilshan
           outputs: dist/github-contribution-grid-snake.svg
           
       # push the content of <build_dir> to a branch
